# amd-gpu-fan-daemon

./: Cargo.toml  LICENSE  README.md  amd-gpu-fan.service
DEBIAN/: control
deb/: debian-build.sh
deb/DEBIAN/: control  postinst  prerm
debian/: debian-build.sh
doc/: README.md
docs/: README.md  commands.md  config.md  install.md
src/: main.rs
src/config/: Cargo.toml
src/config/src/: init.rs  lib.rs  load.rs  push.rs
src/device/: Cargo.toml
src/device/src/: find.rs  lib.rs  push.rs  update.rs
