#cargo-features = ["strip"]

[package]
name = "amd-gpu-fan-daemon"
version = "1.0.0"
edition = "2021"
license = "Unlicense/MIT"
description="a simple daemon to control the fan curvature of amd video cards written in rust"

[dependencies]
device = {path = "src/device"}
config = {path = "src/config"}

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
#strip = true
